[package]
name = "hsproxy"
version = "0.1.0"
authors = ["Jason NI (nixin) <jason.ni.py@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "0.6.0"
chrono = "0.4.19"
dns-lookup = "1.0.5"
env_logger = "0.7"
http = "0.2.2"
httparse = "1.3.4"
log = "0.4"
pretty-hex = "0.2.1"
thiserror = "1.0"
tokio = { version = "0.3", features = ["full"]}
url = "2.2.0"

[dev-dependencies]
thrussh = {path = "../thrussh-mod"}
futures = "0.3"
thrussh-keys = "0.19.4"
